Fix build issues: add missing model package, fix package declarations, file locations, fix corrupted itextpdf JAR
Co-authored-by: ibrahimezman <213491812+ibrahimezman@users.noreply.github.com>